--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # media
 /Django/CSUProjects/static/src/img/
 /Django/media/
+/static_volume
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
