create: init smtp_server, add env variables

--- a/.env_template
+++ b/.env_template
@@ -1,7 +1,14 @@
 DEBUG=
+
 SECRET_KEY=
 ALLOWED_HOSTS=
 LANGUAGE_CODE=
 TIME_ZONE=
 ROOT=
 PORT=
+
+EMAIL_FROM=
+EMAIL_TO=
+EMAIL_TOKEN_ACCESS=
+SMTP_SERVER=
+SMTP_PORT=
