--- a/.env_template
+++ b/.env_template
@@ -1,14 +1,15 @@
-DEBUG=
-
 SECRET_KEY=
 ALLOWED_HOSTS=
-LANGUAGE_CODE=
-TIME_ZONE=
-ROOT=
-PORT=
+WEB_PORT=
 
 EMAIL_FROM=
 EMAIL_TO=
 EMAIL_TOKEN_ACCESS=
 SMTP_SERVER=
 SMTP_PORT=
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+
+HTTP_PROXY=
