--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,7 @@ services:
       EMAIL_TOKEN_ACCESS: ${EMAIL_TOKEN_ACCESS}
       SMTP_SERVER: ${SMTP_SERVER}
       SMTP_PORT: ${SMTP_PORT}
+      HTTP_PROXY: ${HTTP_PROXY}
     expose:
       - 8000
     depends_on:
